--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.5rem;
 }
 
 body {
@@ -11,9 +12,27 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+
+  justify-content: center;
+  align-items: center;
+
+  background: #e1e1e1;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
+button, input {
+  cursor: pointer;
+}
+
+button:hover {
+  background: #7e7d7d;
+}
+
+/*li {*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+/*}*/
