--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,19 @@
 .app > div {
   margin-right: 50px;
 }
+
+.task {
+  font-weight: bold;
+}
+
+.task-done {
+  opacity: 0.5;
+  text-decoration: line-through;
+}
+
+.filter-btn-active {
+  background-color: crimson;
+  color: azure;
+  border: 2px solid crimson;
+  border-radius: 3px;
+}
