--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,9 @@
   border: 2px solid crimson;
   border-radius: 3px;
 }
+
+.taskTitle {
+  border: 2px solid red;
+  outline: none;
+  background-color: #ce8484;
+}
