--- a/src/App.css
+++ b/src/App.css
@@ -7,24 +7,18 @@
   margin-right: 50px;
 }
 
-.task {
-  font-weight: bold;
+.error {
+  border: red 1px solid;
 }
 
-.task-done {
+.error-message {
+  color: red;
+}
+
+.active-filter {
+  background-color: lightgreen;
+}
+
+.is-done {
   opacity: 0.5;
-  text-decoration: line-through;
-}
-
-.filter-btn-active {
-  background-color: crimson;
-  color: azure;
-  border: 2px solid crimson;
-  border-radius: 3px;
-}
-
-.taskTitle {
-  border: 2px solid red;
-  outline: none;
-  background-color: #ce8484;
 }
