--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-.app {
-  padding: 30px;
-  display: flex;
-}
+/*.app {*/
+/*  padding: 30px;*/
+/*  display: flex;*/
+/*}*/
 
-.app > div {
-  margin-right: 50px;
-}
+/*.app > div {*/
+/*  margin-right: 50px;*/
+/*}*/
 
 .error {
   border: red 1px solid;
